Included final copy of page and fixed some alignment issues

--- a/assets/content/less/layout.less
+++ b/assets/content/less/layout.less
@@ -53,7 +53,15 @@ body {
       h2 {
         color: #3a3e40;
         margin-top: 30px;
-        margin-bottom: 15px
+        margin-bottom: 20px;
+        font-size: 20px;
+        font-weight: 600;
+      }
+      p {
+        margin: 0 0 10px;
+      }
+      .btn {
+        margin-top:25px;
       }
     }
   }
